--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -12,6 +12,6 @@ jobs:
       - name: waka-box
         uses: matchai/waka-box@v5.0.0
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: ${{ secrets.GIST_ID }}
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ vars.GH_TOKEN }}
+          GIST_ID: ${{ vars.GIST_ID }}
+          WAKATIME_API_KEY: ${{ varss.WAKATIME_API_KEY }}
