--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -14,4 +14,4 @@ jobs:
         env:
           GH_TOKEN: ${{ vars.GH_TOKEN }}
           GIST_ID: ${{ vars.GIST_ID }}
-          WAKATIME_API_KEY: ${{ varss.WAKATIME_API_KEY }}
+          WAKATIME_API_KEY: ${{ vars.WAKATIME_API_KEY }}
